[gd_scene load_steps=33 format=3 uid="uid://bg4vo8idawsn1"]

[ext_resource type="Script" uid="uid://db6bkm27m2t5l" path="res://Scripts/Classes/Enemies/flying_lakitu.gd" id="1_0b8ws"]
[ext_resource type="Texture2D" uid="uid://gmaobs7yyv34" path="res://Assets/Sprites/Enemys/FishinBoo.png" id="2_ae0sm"]
[ext_resource type="Texture2D" uid="uid://c61kan8ofhtrw" path="res://Assets/Sprites/Objects/LakituCloud.png" id="3_3eplg"]
[ext_resource type="Texture2D" uid="uid://cts25abqr6f4e" path="res://Assets/Sprites/Objects/FishinBooRod.png" id="4_ydc7v"]
[ext_resource type="Texture2D" uid="uid://c28dbypvwp2m7" path="res://Assets/Sprites/Objects/FishingBooFire.png" id="5_87pfx"]
[ext_resource type="Texture2D" uid="uid://bt2kv28ai7fp6" path="res://Assets/Sprites/Objects/LakituCloudOld.png" id="6_3are8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5do64"]
atlas = ExtResource("3_3eplg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0qg3"]
atlas = ExtResource("3_3eplg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhlnc"]
atlas = ExtResource("3_3eplg")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6q3lc"]
atlas = ExtResource("3_3eplg")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_67pk2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5do64")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0qg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhlnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6q3lc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_75mhb"]
resource_name = "Idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_1qcqp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_mghbd"]
resource_name = "ThrowShell"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1e-05, 1e-05),
"update": 0,
"values": [0, 2, 2, 4, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h54jb"]
_data = {
&"Idle": SubResource("Animation_75mhb"),
&"RESET": SubResource("Animation_1qcqp"),
&"ThrowShell": SubResource("Animation_mghbd")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_kuapp"]
atlas = ExtResource("5_87pfx")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2n576"]
atlas = ExtResource("5_87pfx")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jknb5"]
atlas = ExtResource("5_87pfx")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xw34g"]
atlas = ExtResource("5_87pfx")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_t2e33"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuapp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2n576")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jknb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xw34g")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_pnc3m"]
radius = 7.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lbppb"]
size = Vector2(10, 23.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_cy8c2"]
atlas = ExtResource("6_3are8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7prbb"]
atlas = ExtResource("6_3are8")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofnad"]
atlas = ExtResource("6_3are8")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rab7p"]
atlas = ExtResource("6_3are8")
region = Rect2(0, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_qhrb2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cy8c2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7prbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofnad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rab7p")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_exvrk"]
atlas = ExtResource("6_3are8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_luf70"]
atlas = ExtResource("6_3are8")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_adgls"]
atlas = ExtResource("6_3are8")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5itj"]
atlas = ExtResource("6_3are8")
region = Rect2(32, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2d170"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_exvrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_luf70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adgls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5itj")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="FishinBoo" type="CharacterBody2D" node_paths=PackedStringArray("fishing_item")]
script = ExtResource("1_0b8ws")
has_1_up = false
fishing_item = NodePath("FishingLine")
friendly = true
enemy_height = 8
gib_type = 1
can_ice_freeze = false

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("2_ae0sm")
hframes = 2

[node name="Cloud" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 1
sprite_frames = SubResource("SpriteFrames_67pk2")
autoplay = "default"
frame_progress = 0.992326

[node name="Animations" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_h54jb")
}
autoplay = "Idle"

[node name="FishingLine" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(-12, -15)
texture = ExtResource("4_ydc7v")

[node name="Line2D" type="Line2D" parent="FishingLine"]
points = PackedVector2Array(-8, -8, -8, 59)
width = 1.0

[node name="Flame" type="AnimatedSprite2D" parent="FishingLine"]
position = Vector2(-8, 61)
sprite_frames = SubResource("SpriteFrames_t2e33")
autoplay = "default"
frame_progress = 0.392324

[node name="Hitbox" type="Area2D" parent="FishingLine/Flame"]
monitorable = false

[node name="Shape" type="CollisionShape2D" parent="FishingLine/Flame/Hitbox"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_pnc3m")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -11.25)
shape = SubResource("RectangleShape2D_lbppb")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(-1.90735e-06, 12)
scale = Vector2(3.9, 6)

[node name="OldCloud" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -9)
sprite_frames = SubResource("SpriteFrames_qhrb2")
autoplay = "default"

[node name="Back" type="AnimatedSprite2D" parent="OldCloud"]
show_behind_parent = true
z_index = -1
position = Vector2(0, 2)
sprite_frames = SubResource("SpriteFrames_2d170")
autoplay = "default"

[connection signal="killed" from="." to="." method="summon_cloud"]
[connection signal="area_entered" from="FishingLine/Flame/Hitbox" to="." method="player_hit_fire"]
[connection signal="area_entered" from="Hitbox" to="." method="check_hit"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
